--- a/style.css
+++ b/style.css
@@ -16,34 +16,34 @@ body {
     background-color: #0A0624;
 }
 
+.nav-link {
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: xx-large;
+    color: #E4E6ED;
+    margin-left: 30px;
+    margin-right: 20px;
+    padding: 0px;
+}
+
 #navbar__logo {
     color: #E4E6ED;
     padding-left: 30px;
 }
 
-
-.nav-item {
-}
-
-.nav-link {
-    margin-left: 30px;
-    margin-right: 20px;
-    color: #E4E6ED;
-    font-family: 'Source Sans Pro', sans-serif;
-    padding: 0px;
+#navbar-gradient-hack {
+    background: linear-gradient(180deg, rgba(10,6,36,1) 0%, rgba(102,110,135,1) 13%, rgba(228,230,237,1) 100%);
+    height: 10px
 }
 
 .jumbotron {
+    font-family: 'Source Sans Pro', sans-serif;
+    font-weight: 800;
     font-size: 100px;
-}
-
-.jumbotron-main {
-    text-align: center;
-    height: 500px;
+    background-color: #E4E6ED;
 }
 
 #header-fullname {
-    background-color: linen;
+    background-color: #E4E6ED;
     /* margin-left: 100px; */
 }
 
