--- a/style.css
+++ b/style.css
@@ -10,6 +10,20 @@ header {
 
 body {
     background-color: #E4E6ED;
+    height: 100%;
+}
+
+footer {
+    position: sticky;
+    bottom: 0;
+    background-color: #0A0624;
+    color: #E4E6ED;
+    padding: 10px;
+}
+
+h5 {
+    font-size: 150%;
+    font-family: 'Source Sans Pro', sans-serif;
 }
 
 .navbar {
@@ -32,7 +46,7 @@ body {
 
 #navbar-gradient-hack {
     background: linear-gradient(180deg, rgba(10,6,36,1) 0%, rgba(10,6,36,0.5) 68%, rgba(10,6,36,0) 100%);
-    height: 40px
+    height: 10px
 }
 
 .jumbotron {
@@ -57,12 +71,35 @@ body {
 
 #bio-picture-img {
     z-index: -1;
-    max-height: 100%;
-    max-width: 90%;
+    /* regardless of the size of the page, 
+    the height will always be 100% of the parent */
+    height: 100%;
+    /* max-width: 30%; */
     position: absolute;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
+    object-fit: cover;
+}
+
+#bio-description__button {
+    height: 200px;
+}
+
+/* CONTACT PAGE -- FORMS */
+
+.form-group label {
+    font-size: larger;
+}
+
+/* PORTFOLIO PAGE */
+
+.card {
+    width: 100%;
+    height: 50%;
+}
+
+.card-img-top {
     object-fit: cover;
 }
