--- a/style.css
+++ b/style.css
@@ -1,11 +1,16 @@
-body, html {
+body {
   height: 100%;
   width: 100%;
 }
 
 h1 {
   text-align: center;
-  font-size: 15vw;
+  font-size: 10vw;
+}
+
+h2 {
+  text-align: center;
+  font-size: 6vw;
 }
 
 .container {
@@ -16,21 +21,82 @@ h1 {
 
 #splash {
   display: grid;
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
-  height: 100vh;
+  grid-template-rows: 1fr 1fr 0.5fr 0.5fr 0.5fr 0.5fr 0.5fr 0.5fr;
+  height: 90vh;
   width: 100vw;
   background-attachment: fixed;
   background-color: #ffe6e6;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='12' viewBox='0 0 20 12'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='charlie-brown' fill='%2348728d' fill-opacity='0.25'%3E%3Cpath d='M9.8 12L0 2.2V.8l10 10 10-10v1.4L10.2 12h-.4zm-4 0L0 6.2V4.8L7.2 12H5.8zm8.4 0L20 6.2V4.8L12.8 12h1.4zM9.8 0l.2.2.2-.2h-.4zm-4 0L10 4.2 14.2 0h-1.4L10 2.8 7.2 0H5.8z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 }
 #splash h1 {
-  grid-row: 3;
+  grid-row: 2;
   font-family: "Louis George Cafe", sans-serif;
   color: #48728d;
+  animation: splash-fade-in 1.8s ease-in;
+}
+#splash h2 {
+  margin-top: 25px;
+  grid-row: 3;
+  font-family: "Louis George Cafe", sans-serif;
+}
+
+@keyframes splash-fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 100;
+  }
+}
+@media only screen and (max-width: 420px) {
+  #splash h1 {
+    font-size: 17vw;
+  }
+
+  #splash h2 {
+    font-size: 10vw;
+  }
+}
+#nav-wrapper {
+  height: 10vh;
+  width: 100vw;
+  position: sticky;
+  position: -webkit-sticky;
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-attachment: fixed;
+  background-color: #48728d;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%23fgColorNoHashtag' fill-opacity='0.25' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
+}
+#nav-wrapper div {
+  position: relative;
+}
+#nav-wrapper svg {
+  color: #ffe6e6;
+  transition: color 0.5s;
+  cursor: pointer;
+}
+#nav-wrapper svg + span {
+  position: absolute;
+  bottom: 100px;
+  color: red;
+  opacity: 0%;
+  transition: opacity 0.5s;
+}
+#nav-wrapper svg:hover {
+  color: 120deg;
+  color: orange;
+}
+#nav-wrapper svg:hover + span {
+  opacity: 100%;
 }
 
 #below-fold {
-  height: 100vh;
-  width: 100vw;
+  height: 200vh;
+  background-attachment: fixed;
   background-color: #48728d;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='12' viewBox='0 0 20 12'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='charlie-brown' fill='%23ffe6e6' fill-opacity='0.25'%3E%3Cpath d='M9.8 12L0 2.2V.8l10 10 10-10v1.4L10.2 12h-.4zm-4 0L0 6.2V4.8L7.2 12H5.8zm8.4 0L20 6.2V4.8L12.8 12h1.4zM9.8 0l.2.2.2-.2h-.4zm-4 0L10 4.2 14.2 0h-1.4L10 2.8 7.2 0H5.8z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+  background-attachment: local;
 }
