--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
-body {
-  height: 100%;
-  width: 100%;
-}
-
 h1 {
   text-align: center;
   font-size: 10vw;
@@ -15,7 +10,6 @@ h2 {
 
 .container {
   height: 100%;
-  width: 100%;
   background-color: #ffe6e6;
 }
 
@@ -23,7 +17,6 @@ h2 {
   display: grid;
   grid-template-rows: 1fr 1fr 0.5fr 0.5fr 0.5fr 0.5fr 0.5fr 0.5fr;
   height: 90vh;
-  width: 100vw;
   background-attachment: fixed;
   background-color: #ffe6e6;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='12' viewBox='0 0 20 12'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='charlie-brown' fill='%2348728d' fill-opacity='0.25'%3E%3Cpath d='M9.8 12L0 2.2V.8l10 10 10-10v1.4L10.2 12h-.4zm-4 0L0 6.2V4.8L7.2 12H5.8zm8.4 0L20 6.2V4.8L12.8 12h1.4zM9.8 0l.2.2.2-.2h-.4zm-4 0L10 4.2 14.2 0h-1.4L10 2.8 7.2 0H5.8z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
@@ -59,7 +52,6 @@ h2 {
 }
 #nav-wrapper {
   height: 10vh;
-  width: 100vw;
   position: sticky;
   position: -webkit-sticky;
   top: 0;
@@ -70,33 +62,37 @@ h2 {
   background-color: #48728d;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%23fgColorNoHashtag' fill-opacity='0.25' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
 }
-#nav-wrapper div {
+#nav-wrapper .nav-icon {
   position: relative;
 }
 #nav-wrapper svg {
-  color: #ffe6e6;
-  transition: color 0.5s;
   cursor: pointer;
+  color: #192024;
+  transition: color 0.5s;
 }
-#nav-wrapper svg + span {
+#nav-wrapper svg + .nav-label {
   position: absolute;
-  bottom: 100px;
-  color: red;
+  left: 0px;
+  width: 100%;
+  bottom: 100%;
+  font-size: 1.5em;
+  text-align: center;
+  pointer-events: none;
+  color: #ffe6e6;
+  background-color: #192024;
+  border-radius: 15%;
   opacity: 0%;
   transition: opacity 0.5s;
 }
 #nav-wrapper svg:hover {
   color: 120deg;
-  color: orange;
+  color: #ffe6e6;
 }
-#nav-wrapper svg:hover + span {
+#nav-wrapper svg:hover + .nav-label {
   opacity: 100%;
 }
 
 #below-fold {
   height: 200vh;
-  background-attachment: fixed;
-  background-color: #48728d;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='12' viewBox='0 0 20 12'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='charlie-brown' fill='%23ffe6e6' fill-opacity='0.25'%3E%3Cpath d='M9.8 12L0 2.2V.8l10 10 10-10v1.4L10.2 12h-.4zm-4 0L0 6.2V4.8L7.2 12H5.8zm8.4 0L20 6.2V4.8L12.8 12h1.4zM9.8 0l.2.2.2-.2h-.4zm-4 0L10 4.2 14.2 0h-1.4L10 2.8 7.2 0H5.8z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
   background-attachment: local;
 }
