--- a/style.css
+++ b/style.css
@@ -92,7 +92,25 @@ h2 {
   opacity: 100%;
 }
 
-#below-fold {
-  height: 200vh;
+#showcase {
+  height: 100vh;
+  width: 100%;
+  background-attachment: fixed;
+  background-color: #48728d;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='12' viewBox='0 0 20 12'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='charlie-brown' fill='%23ffe6e6' fill-opacity='0.25'%3E%3Cpath d='M9.8 12L0 2.2V.8l10 10 10-10v1.4L10.2 12h-.4zm-4 0L0 6.2V4.8L7.2 12H5.8zm8.4 0L20 6.2V4.8L12.8 12h1.4zM9.8 0l.2.2.2-.2h-.4zm-4 0L10 4.2 14.2 0h-1.4L10 2.8 7.2 0H5.8z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
   background-attachment: local;
+  position: relative;
+  overflow: hidden;
+}
+#showcase article {
+  width: 80%;
+  height: 75%;
+  position: absolute;
+  border-radius: 10%;
+  background-color: #192024;
+  transition: left 1s;
+  left: 100%;
+}
+#showcase article.active {
+  left: 0%;
 }
