--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ h1 {
 
 h2 {
   text-align: center;
-  font-size: 6vw;
+  font-size: 4vw;
 }
 
 .container {
@@ -16,21 +16,23 @@ h2 {
 #splash {
   display: grid;
   grid-template-rows: 1fr 1fr 0.5fr 0.5fr 0.5fr 0.5fr 0.5fr 0.5fr;
-  height: 90vh;
+  height: 95vh;
   background-attachment: fixed;
   background-color: #ffe6e6;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='12' viewBox='0 0 20 12'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='charlie-brown' fill='%2348728d' fill-opacity='0.25'%3E%3Cpath d='M9.8 12L0 2.2V.8l10 10 10-10v1.4L10.2 12h-.4zm-4 0L0 6.2V4.8L7.2 12H5.8zm8.4 0L20 6.2V4.8L12.8 12h1.4zM9.8 0l.2.2.2-.2h-.4zm-4 0L10 4.2 14.2 0h-1.4L10 2.8 7.2 0H5.8z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+  background-size: 250%;
 }
 #splash h1 {
   grid-row: 2;
-  font-family: "Louis George Cafe", sans-serif;
+  font-family: "LinLibertine_R", serif;
   color: #48728d;
   animation: splash-fade-in 1.8s ease-in;
 }
 #splash h2 {
   margin-top: 25px;
   grid-row: 3;
-  font-family: "Louis George Cafe", sans-serif;
+  font-family: "LinLibertine_R", serif;
+  color: #5c8dac;
 }
 
 @keyframes splash-fade-in {
@@ -51,7 +53,7 @@ h2 {
   }
 }
 #nav-wrapper {
-  height: 10vh;
+  height: 5vh;
   position: sticky;
   position: -webkit-sticky;
   top: 0;
@@ -65,10 +67,14 @@ h2 {
 #nav-wrapper .nav-icon {
   position: relative;
 }
+#nav-wrapper .fa-circle {
+  color: #ffe6e6;
+}
 #nav-wrapper svg {
   cursor: pointer;
   color: #192024;
   transition: color 0.5s;
+  height: 5vh;
 }
 #nav-wrapper svg + .nav-label {
   position: absolute;
@@ -98,7 +104,8 @@ h2 {
   background-attachment: fixed;
   background-color: #48728d;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='12' viewBox='0 0 20 12'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='charlie-brown' fill='%23ffe6e6' fill-opacity='0.25'%3E%3Cpath d='M9.8 12L0 2.2V.8l10 10 10-10v1.4L10.2 12h-.4zm-4 0L0 6.2V4.8L7.2 12H5.8zm8.4 0L20 6.2V4.8L12.8 12h1.4zM9.8 0l.2.2.2-.2h-.4zm-4 0L10 4.2 14.2 0h-1.4L10 2.8 7.2 0H5.8z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-  background-attachment: local;
+  background-size: 100%;
+  background-attachment: fixed;
   position: relative;
   overflow: hidden;
 }
