--- a/style.css
+++ b/style.css
@@ -1,141 +1,186 @@
-h1 {
+* {
+  /* border: 1px; */
+  /* border-style: dotted; */
+}
+
+header {
   text-align: center;
-  font-size: 10vw;
+  font-size: xx-large;
 }
 
-h2 {
-  text-align: center;
-  font-size: 4vw;
-}
-
-#header-wrapper {
-  height: 5vh;
-  position: sticky;
-  position: -webkit-sticky;
-  top: 0;
-  z-index: 10;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-attachment: fixed;
-  background-color: #48728d;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%23fgColorNoHashtag' fill-opacity='0.25' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
-}
-#header-wrapper .header-icon {
-  position: relative;
-}
-#header-wrapper .fa-circle {
-  color: #ffe6e6;
-}
-#header-wrapper svg {
-  cursor: pointer;
-  color: #192024;
-  transition: color 0.5s;
-  height: 5vh;
-}
-#header-wrapper svg + .header-label {
-  position: absolute;
-  left: 0px;
-  width: 100%;
-  bottom: 100%;
-  font-size: 1.5em;
-  text-align: center;
-  pointer-events: none;
-  color: #ffe6e6;
-  background-color: #192024;
-  border-radius: 15%;
-  opacity: 0%;
-  transition: opacity 0.5s;
-}
-#header-wrapper svg:hover {
-  color: 120deg;
-  color: #ffe6e6;
-}
-#header-wrapper svg:hover + .header-label {
-  opacity: 100%;
-}
-
-#container-nav {
-  grid-column: nav;
-  height: 95vh;
-  background-color: #ffe6e6;
-  overflow-y: scroll;
-  position: sticky;
-  top: 5vh;
-}
-
-.navh-1 {
-  margin-top: 15%;
-  margin-left: 10%;
-  font-weight: 800;
-}
-
-.navh-2 {
-  margin-top: 5%;
-  margin-left: 13%;
-}
-
-#splash {
-  display: grid;
-  grid-template-rows: 1fr 1fr 0.5fr 0.5fr 0.5fr 0.5fr 0.5fr 0.5fr;
-  height: 95vh;
-  background-attachment: fixed;
-  background-color: #ffe6e6;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='12' viewBox='0 0 20 12'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='charlie-brown' fill='%2348728d' fill-opacity='0.25'%3E%3Cpath d='M9.8 12L0 2.2V.8l10 10 10-10v1.4L10.2 12h-.4zm-4 0L0 6.2V4.8L7.2 12H5.8zm8.4 0L20 6.2V4.8L12.8 12h1.4zM9.8 0l.2.2.2-.2h-.4zm-4 0L10 4.2 14.2 0h-1.4L10 2.8 7.2 0H5.8z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-  background-size: 250%;
-}
-#splash h1 {
-  grid-row: 2;
-  font-family: "LinLibertine_R", serif;
-  color: #48728d;
-  animation: splash-fade-in 1.8s ease-in;
-}
-#splash h2 {
-  margin-top: 25px;
-  grid-row: 3;
-  font-family: "LinLibertine_R", serif;
-  color: #5c8dac;
-}
-
-@keyframes splash-fade-in {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 100;
-  }
-}
-@media only screen and (max-width: 420px) {
-  #splash h1 {
-    font-size: 17vw;
-  }
-
-  #splash h2 {
-    font-size: 10vw;
-  }
-}
-#showcase-wrapper {
-  display: grid;
+body {
+  background-color: #E4E6ED;
   height: 100vh;
+}
+
+footer {
+  position: fixed;
+  bottom: -1px;
   width: 100%;
-  position: relative;
-  background-attachment: fixed;
-  background-color: #48728d;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='12' viewBox='0 0 20 12'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='charlie-brown' fill='%23ffe6e6' fill-opacity='0.25'%3E%3Cpath d='M9.8 12L0 2.2V.8l10 10 10-10v1.4L10.2 12h-.4zm-4 0L0 6.2V4.8L7.2 12H5.8zm8.4 0L20 6.2V4.8L12.8 12h1.4zM9.8 0l.2.2.2-.2h-.4zm-4 0L10 4.2 14.2 0h-1.4L10 2.8 7.2 0H5.8z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-  background-size: 250%;
-  background-attachment: fixed;
-  overflow: hidden;
+  background-color: #0A0624;
+  color: #E4E6ED;
+  padding: 10px;
 }
-#showcase-wrapper article {
-  margin-top: 20vh;
-  width: 80%;
+
+h1 {
+  font-family: "Source Sans Pro", sans-serif;
+  font-weight: 800;
+  font-size: 100px;
+}
+
+h5 {
+  font-size: 150%;
+  font-family: "Source Sans Pro", sans-serif;
+}
+
+.debug {
+  border: red;
+  border-style: dotted;
+  border-width: 1px;
+  height: 100%;
+}
+
+/* ANCHOR NAVBAR!! */
+.navbar {
+  padding-left: 25px;
+  background-color: #0A0624;
+}
+
+.nav-link {
+  font-family: "Source Sans Pro", sans-serif;
+  font-size: xx-large;
+  color: #E4E6ED;
+  margin-left: 30px;
+  margin-right: 20px;
+  padding: 0px;
+}
+
+#navbar__logo {
+  color: #E4E6ED;
+  padding-left: 30px;
+}
+
+#navbar__fullname {
+  color: #E4E6ED;
+  font-family: "Source Sans Pro", serif;
+  font-size: 250%;
+  letter-spacing: 5px;
+  margin-left: 5%;
+}
+
+#navbar-gradient-hack {
+  background: linear-gradient(180deg, #0a0624 0%, rgba(10, 6, 36, 0.5) 68%, rgba(10, 6, 36, 0) 100%);
+  height: 10px;
+}
+
+.fa-caret-square-down {
+  color: #E4E6ED;
+}
+
+/* ANCHOR INDEX */
+.btn--index {
+  height: 150%;
+  width: 75%;
+  background-color: #0A0624;
+  color: #E4E6ED;
+}
+
+.bio-row {
+  margin-top: 2vh;
+  height: 40vh;
+  align-items: center;
+}
+
+.bio-header {
+  font-family: "Recursive", serif;
+  /* fun easy-going serif text */
+  text-align: center;
+  padding-top: 5%;
+}
+
+.bio-desc {
+  text-align: center;
+  padding-top: 20px;
+  margin-bottom: 25px;
+  font-size: larger;
+}
+
+#bio-picture-img {
+  z-index: -1;
+  /* regardless of the size of the page, 
+  the height will always be 100% of the parent */
+  height: 100vh;
+  object-fit: cover;
+  /* Object Position declares the center of the image (will crop the image with this point as the anchor) */
+  object-position: 40% 50%;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+#bio-picture-img--sm {
+  z-index: -1;
+  opacity: 50%;
+  /* regardless of the size of the page, 
+  the height will always be 100% of the parent */
+  height: 100%;
+  max-height: 120%;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  object-fit: cover;
+}
+
+#bio-description__button {
+  height: 200px;
+}
+
+/* ANCHOR CONTACT PAGE -- FORMS */
+.form-group label {
+  font-size: larger;
+}
+
+/* ANCHOR PORTFOLIO PAGE */
+.card {
+  width: 100%;
   height: 50%;
-  position: absolute;
-  border-radius: 10%;
-  background-color: #192024;
-  transition: left 1s;
-  left: 100%;
 }
-#showcase-wrapper article.active {
-  left: 0%;
+
+.card-img-top {
+  object-fit: cover;
+}
+
+/* SMALL SCREEN */
+@media screen and (max-width: 991px) {
+  .bio-row {
+    height: 75%;
+  }
+
+  .bio-header {
+    font-size: 300%;
+  }
+
+  .nav-link {
+    text-align: end;
+  }
+
+  #navbar__fullname {
+    margin-left: 1%;
+  }
+}
+/* MEDIUM SCREEN */
+@media screen and (min-width: 992px) {
+  .bio-header {
+    font-size: 350%;
+  }
+}
+/* LARGE SCREEN OR BIGGER */
+@media screen and (min-width: 1200px) {
+  .bio-header {
+    font-size: 500%;
+  }
 }
