--- a/style.scss
+++ b/style.scss
@@ -33,9 +33,9 @@ h2 {
 }
 
 // ANCHOR Header
-#header-wrapper {
+#nav-wrapper {
     // Position
-    height: 5vh;
+    height: 10vh;
     position: sticky;
     position: -webkit-sticky;
     top: 0;
