--- a/style.scss
+++ b/style.scss
@@ -78,6 +78,12 @@ h5 {
     color: #E4E6ED;
 }
 
+// ANCHOR Footer
+
+.footer-muted {
+    color: darken(#E4E6ED, 25);
+    font-style: italic;
+}
 
 /* ANCHOR INDEX */
 
