added gradient hack to about page

--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ h5 {
 }
 
 .footer-muted {
-  color: #989fba;
+  color: #999ca7;
   font-style: italic;
 }
 
@@ -117,12 +117,11 @@ h5 {
   height: 100vh;
   object-fit: cover;
   /* Object Position declares the center of the image (will crop the image with this point as the anchor) */
-  object-position: 40% 50%;
+  object-position: 0% 50%;
   position: fixed;
   top: 0;
   bottom: 0;
   left: 0;
-  right: 0;
 }
 
 #bio-picture-img--sm {
@@ -140,6 +139,17 @@ h5 {
 
 #bio-description__button {
   height: 200px;
+}
+
+#main-content-gradient-hack {
+  width: 30%;
+  height: 120%;
+  background-color: #E4E6ED;
+  background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, #e4e6ed 80%);
+  position: absolute;
+  right: 0;
+  top: -10%;
+  z-index: -1;
 }
 
 /* ANCHOR CONTACT PAGE -- FORMS */
