--- a/style.scss
+++ b/style.scss
@@ -81,7 +81,7 @@ h5 {
 // ANCHOR Footer
 
 .footer-muted {
-    color: darken(#E4E6ED, 25);
+    color: darken(#999ca7, 0);
     font-style: italic;
 }
 
@@ -121,12 +121,11 @@ h5 {
     height: 100vh;
     object-fit: cover;
     /* Object Position declares the center of the image (will crop the image with this point as the anchor) */
-    object-position: 40% 50%;
+    object-position: 0% 50%;
     position: fixed;
     top: 0;
     bottom: 0;
     left: 0;
-    right: 0;
 }
 
 #bio-picture-img--sm {
@@ -144,6 +143,17 @@ h5 {
 
 #bio-description__button {
     height: 200px;
+}
+
+#main-content-gradient-hack {
+    width: 30%;
+    height: 120%;
+    background-color: #E4E6ED;
+    background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(228,230,237,1) 80%);
+    position: absolute;
+    right: 0;
+    top: -10%;
+    z-index: -1;
 }
 
 /* ANCHOR CONTACT PAGE -- FORMS */
