--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,8 +1,35 @@
 body {
+  overflow: hidden;
+  background-color: #faddff;
+}
+
+section {
+  position: absolute;
+}
+
+#container {
+  position: relative;
+  overflow: hidden;
+  width: 100vw;
+  height: 100vh;
+}
+
+#index-container {
+  height: 100vh;
+  width: 100vw;
   background-color: #faddff;
 }
 
 #header-name {
-  font-size: 500%;
+  padding-top: 15vh;
+  font-size: 10vw;
   text-align: center;
+}
+
+#portfolio-container {
+  top: 0;
+  left: 100vw;
+  height: 100vh;
+  width: 100vw;
+  background-color: green;
 }
