splash screen added for loading time

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,10 +1,21 @@
 body {
   overflow: hidden;
-  background-color: #faddff;
+  background-color: #081810;
 }
 
 section {
   position: absolute;
+  height: 100vh;
+  width: 100vw;
+}
+
+#splash {
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+  z-index: 10;
+  background-color: black;
+  pointer-events: none;
 }
 
 #container {
@@ -27,7 +38,9 @@ section {
 }
 
 #portfolio-container {
-  height: 100vh;
-  width: 100vw;
   background-color: green;
+}
+
+#contact-container {
+  background-color: blue;
 }
