last commit before I try to rework... the camera thing is too much I think

--- a/Assets/css/style.scss
+++ b/Assets/css/style.scss
@@ -37,6 +37,10 @@ section {
     height: 100vh;
     width: 100vw;
     background-color: $pink-light;
+
+    .index-link {
+        
+    }
 }
 
 #header-name {
