--- a/Assets/css/style.scss
+++ b/Assets/css/style.scss
@@ -1,26 +1,23 @@
 $green-black: #081810;
 $green-dark: #0b2518;
 $pink-light: #faddff;
+$clr-button: #263f66;
 
 body {
-    // height: 100vh;
-    // width: 100vw;
-    
-    overflow: hidden;
     background-color: $green-black;
     // background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='18' viewBox='0 0 100 18'%3E%3Cpath fill='%23081810' fill-opacity='0.4' d='M61.82 18c3.47-1.45 6.86-3.78 11.3-7.34C78 6.76 80.34 5.1 83.87 3.42 88.56 1.16 93.75 0 100 0v6.16C98.76 6.05 97.43 6 96 6c-9.59 0-14.23 2.23-23.13 9.34-1.28 1.03-2.39 1.9-3.4 2.66h-7.65zm-23.64 0H22.52c-1-.76-2.1-1.63-3.4-2.66C11.57 9.3 7.08 6.78 0 6.16V0c6.25 0 11.44 1.16 16.14 3.42 3.53 1.7 5.87 3.35 10.73 7.24 4.45 3.56 7.84 5.9 11.31 7.34zM61.82 0h7.66a39.57 39.57 0 0 1-7.34 4.58C57.44 6.84 52.25 8 46 8S34.56 6.84 29.86 4.58A39.57 39.57 0 0 1 22.52 0h15.66C41.65 1.44 45.21 2 50 2c4.8 0 8.35-.56 11.82-2z'%3E%3C/path%3E%3C/svg%3E");
 }
 
 section {
     position: absolute;
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
 }
 
 #splash {
     position: absolute;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     z-index: 10;
     background-color: black;
     pointer-events: none;
@@ -28,26 +25,23 @@ section {
 
 #container {
     position: relative;
-    overflow: hidden;
-    width: 100vw;
+    // overflow: hidden;
+    // width: 100vw;
     height: 100vh;
 }
 
 #index-container {
-    height: 100vh;
-    width: 100vw;
+    display: grid;
+    grid-template-rows: [start] 2fr [header-end] 2fr 2fr 2fr [links-start] 2fr 2fr [links-end] 1fr [end];
     background-color: $pink-light;
-
-    .index-link {
-        
+    
+    #header-name {
+        padding-top: 15vh;
+        font-size: 8vw;
+        text-align: center;
     }
 }
 
-#header-name {
-    padding-top: 15vh;
-    font-size: 8vw;
-    text-align: center;
-}
 
 #portfolio-container {
     background-color: green;
@@ -55,4 +49,29 @@ section {
 
 #contact-container {
     background-color: blue;
+}
+
+.links-wrapper {
+    grid-row: links-start / links-end;
+    justify-content: center;
+    text-align: center;
+    font-size: 100%;
+
+    .index-link {
+        font-size: 400%;
+        margin: 2% 5%;
+    }
+}
+
+.button-large {
+    background-color: $clr-button;
+    border: 5px outset $green-dark;
+    border-radius: 20px;
+    color: $pink-light;
+    cursor: pointer;
+    padding: 1% 2%;
+}
+
+.button-large:active {
+    border: inset;
 }
