--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -4,17 +4,18 @@ html, body {
 }
 
 section {
-  background-color: none;
+  display: flex;
   height: 100vh;
   width: 100%;
 }
 
-#background-image {
-  background-image: url("../Images/backgrounds/gravel-daniel-absi.jpg");
+.background-image {
   position: absolute;
-  height: 100%;
+  height: 100vh;
   width: 100%;
+  z-index: -5;
   background-attachment: fixed;
+  background-position: 0px;
   background-size: cover;
 }
 
@@ -34,19 +35,57 @@ section {
 
 .content-panel {
   margin: auto;
-  width: 70%;
+  width: 60%;
   height: 100%;
   display: grid;
 }
 
-#index-container .content-panel {
-  grid-template-rows: [start] 2fr [header-end] 2fr 2fr 2fr [links-start] 2fr 2fr [links-end] 1fr [end];
-  background-color: #faddff;
+#index-container .background-image {
+  background-image: url("../Images/backgrounds/foggy-gabriela-palai.jpg");
 }
-#index-container #header-name {
-  padding-top: 15vh;
+#index-container .content-panel {
+  grid-template-rows: [start] 2fr [links-start] 4fr [links-end end];
+  grid-template-columns: [start] 1fr [end];
+  height: 70%;
+  width: 60vw;
+  align-self: center;
+  justify-content: center;
+  position: relative;
+  border-radius: 30px;
+}
+#index-container .content-panel .panel-header {
+  grid-column: start/span end;
+  background-color: #081810;
+  color: #faddff;
   font-size: 8vw;
+  display: flex;
   text-align: center;
+  justify-content: center;
+  align-self: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  border-top-left-radius: inherit;
+  border-top-right-radius: inherit;
+  border: 2px black solid;
+  border-bottom: none;
+}
+#index-container .content-panel .panel-body {
+  display: grid;
+  grid-template-rows: [start links-start] 1fr 1fr 1fr 1fr [links-end end];
+  grid-template-columns: [start links-start] 1fr [links-end] 2fr [end];
+  height: 100%;
+  width: 100%;
+  background-color: #707065;
+  border-bottom-left-radius: inherit;
+  border-bottom-right-radius: inherit;
+  border: 2px black solid;
+  border-top: none;
+  text-align: center;
+}
+#index-container .links-wrapper .index-link {
+  font-size: 200%;
+  margin: 2% 5%;
 }
 
 #portfolio-container .content-panel {
@@ -58,19 +97,23 @@ section {
 }
 
 .links-wrapper {
+  display: flex;
+  flex-direction: column;
   grid-row: links-start/links-end;
-  justify-content: center;
+  grid-column: links-start/links-end;
   text-align: center;
+  justify-content: center;
+  align-items: center;
   font-size: 100%;
+  z-index: 2;
 }
-.links-wrapper .index-link {
-  font-size: 400%;
-  margin: 2% 5%;
+.links-wrapper .button:hover {
+  background-color: #abc0e0;
 }
 
 .button-large {
   background-color: #263f66;
-  border: 5px outset #0b2518;
+  border: 3px outset #0b2518;
   border-radius: 20px;
   color: #faddff;
   cursor: pointer;
