--- a/Assets/css/style.scss
+++ b/Assets/css/style.scss
@@ -1,7 +1,15 @@
 $green-black: #081810;
 $green-dark: #0b2518;
-$pink-light: #faddff;
+$clr-yellow-gray: #707065;
+$clr-pink-light: #faddff;
 $clr-button: #263f66;
+
+@mixin pseudoElement {
+    width: 100%;
+    height: 100%;
+    content: "";
+    position: absolute;
+}
 
 html, body {
     position: relative;
@@ -10,20 +18,21 @@ html, body {
 }
 
 section {
-    background-color: none;
+    display: flex;
     height: 100vh;
     width: 100%;
 }
 
-#background-image {
-    background-image: url("../Images/backgrounds/gravel-daniel-absi.jpg");
+.background-image {
     position: absolute;
-    height: 100%;
+    height: 100vh;
     width: 100%;
+    z-index: -5;
     // Creates parralax effect
     background-attachment: fixed;
-    // background-position: center;
+    background-position: 0px;
     background-size: cover;
+    // background-repeat: no-repeat;
 }
 
 #splash {
@@ -37,64 +46,121 @@ section {
 
 #container {
     position: relative;
-    // overflow: hidden;
-    // width: 100vw;
     height: 100%;
 }
 
 .content-panel {
     margin: auto;
-    width: 70%;
+    width: 60%;
     height: 100%;
     display: grid;
 }
 
 #index-container {
+    .background-image {
+        background-image: url("../Images/backgrounds/foggy-gabriela-palai.jpg");
+    }
 
     .content-panel {
-        grid-template-rows: [start] 2fr [header-end] 2fr 2fr 2fr [links-start] 2fr 2fr [links-end] 1fr [end];
-        background-color: $pink-light;
-    }
+        grid-template-rows: [start] 2fr [links-start] 4fr [links-end end];
+        grid-template-columns: [start] 1fr [end];
+        // background-color: $green-black;
+        height: 70%;
+        width: 60vw;
+        align-self: center;
+        justify-content: center;
+        position: relative;
+        // border: 10px solid red;
+        border-radius: 30px;
+
+        .panel-header {
+            grid-column: start / span end;
+            background-color: $green-black;
+            color: $clr-pink-light;
+            font-size: 8vw;
+            display: flex;
+            text-align: center;
+            justify-content: center;
+            align-self: center;
+            align-items: center;
+            height: 100%;
+            width: 100%;
+            border-top-left-radius: inherit;
+            border-top-right-radius: inherit;
+            border: 2px black solid;
+            border-bottom: none;
+            // border: black solid;
+        }
     
-    #header-name {
-        padding-top: 15vh;
-        font-size: 8vw;
-        text-align: center;
+        .panel-body {
+            display: grid;
+            grid-template-rows: [start links-start] 1fr 1fr 1fr 1fr [links-end end];
+            grid-template-columns: [start links-start] 1fr [links-end] 2fr [end];
+
+            height: 100%;
+            width: 100%;
+            background-color: $clr-yellow-gray;
+            border-bottom-left-radius: inherit;
+            border-bottom-right-radius: inherit;
+            border: 2px black solid;
+            border-top: none;
+            text-align: center;
+            // border: 2px 0px 2px 2px;
+            // border: black solid;
+        }
     }
+
+    .links-wrapper {
+        .index-link {
+            font-size: 200%;
+            margin: 2% 5%;
+        }
+    }
+
+    // .content-panel::before {
+    //     @include pseudoElement;
+    //     height: 66%;
+    //     bottom: 0;
+    //     background-color: $clr-pink-light;
+    //     border-radius: 0 0 30px 30px;
+
+    // }
 }
 
 
 #portfolio-container {
     .content-panel {
-
         background-color: green;
     }
 }
 
 #contact-container {
     .content-panel {
-
         background-color: blue;
     }
 }
 
 .links-wrapper {
+    display: flex;
+    flex-direction: column;
     grid-row: links-start / links-end;
-    justify-content: center;
+    grid-column: links-start / links-end;
     text-align: center;
+    justify-content: center;
+    align-items: center;
     font-size: 100%;
+    z-index: 2;
 
-    .index-link {
-        font-size: 400%;
-        margin: 2% 5%;
+    .button:hover {
+        background-color: lighten($color: $clr-button, $amount: 50);
     }
 }
 
 .button-large {
     background-color: $clr-button;
-    border: 5px outset $green-dark;
+    border: 3px outset $green-dark;
     border-radius: 20px;
-    color: $pink-light;
+    color: $clr-pink-light;
     cursor: pointer;
     padding: 1% 2%;
 }
