--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -5,8 +5,19 @@ html, body {
 
 section {
   display: flex;
+  position: relative;
+  flex-direction: column;
   height: 100vh;
   width: 100%;
+}
+section header {
+  text-align: center;
+  order: 0;
+  width: 100%;
+  height: 7vh;
+  background-color: #0b2518;
+  font-size: 200%;
+  color: #faddff;
 }
 
 .background-image {
@@ -43,6 +54,18 @@ section {
 #index-container .background-image {
   background-image: url("../Images/backgrounds/foggy-gabriela-palai.jpg");
 }
+#index-container #fx-fog {
+  width: 100%;
+  height: 100%;
+  content: "";
+  position: absolute;
+  color: none;
+  height: 70%;
+  width: 60%;
+  border-radius: 100%;
+  background: #7d7d7d;
+  background: radial-gradient(circle, #7d7d7d 0%, rgba(208, 210, 215, 0) 53%, rgba(228, 230, 237, 0) 100%);
+}
 #index-container .content-panel {
   grid-template-rows: [start] 2fr [links-start] 4fr [links-end end];
   grid-template-columns: [start] 1fr [end];
@@ -52,6 +75,7 @@ section {
   justify-content: center;
   position: relative;
   border-radius: 30px;
+  box-shadow: 10px 10px 15px #0b2518;
 }
 #index-container .content-panel .panel-header {
   grid-column: start/span end;
@@ -88,6 +112,9 @@ section {
   margin: 2% 5%;
 }
 
+#portfolio-container .background-image {
+  background-image: url("../Images/backgrounds/pexels-efdal-yildiz-917494.jpg");
+}
 #portfolio-container .content-panel {
   background-color: green;
 }
