--- a/Assets/css/style.scss
+++ b/Assets/css/style.scss
@@ -19,8 +19,20 @@ html, body {
 
 section {
     display: flex;
+    position: relative;
+    flex-direction: column;
     height: 100vh;
     width: 100%;
+
+    header {
+        text-align: center;
+        order: 0;
+        width: 100%;
+        height: 7vh;
+        background-color: $green-dark;
+        font-size: 200%;
+        color: $clr-pink-light;
+    }
 }
 
 .background-image {
@@ -61,6 +73,19 @@ section {
         background-image: url("../Images/backgrounds/foggy-gabriela-palai.jpg");
     }
 
+    #fx-fog {
+        @include pseudoElement;
+        // background-color: rgba($color: gray, $alpha: 0.2);
+        color: none;
+        height: 70%;
+        width: 60%;
+        border-radius: 100%;
+        // box-shadow: 0px 0px 50px gray;
+
+        background: rgb(125,125,125);
+        background: radial-gradient(circle, rgba(125,125,125,1) 0%, rgba(208,210,215,0) 53%, rgba(228,230,237,0) 100%);
+    }
+
     .content-panel {
         grid-template-rows: [start] 2fr [links-start] 4fr [links-end end];
         grid-template-columns: [start] 1fr [end];
@@ -72,6 +97,7 @@ section {
         position: relative;
         // border: 10px solid red;
         border-radius: 30px;
+        box-shadow: 10px 10px 15px $green-dark;
 
         .panel-header {
             grid-column: start / span end;
@@ -129,9 +155,14 @@ section {
 
 
 #portfolio-container {
+    .background-image {
+        background-image: url("../Images/backgrounds/pexels-efdal-yildiz-917494.jpg");
+    }
+    
     .content-panel {
         background-color: green;
     }
+    
 }
 
 #contact-container {
