--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -9,6 +9,7 @@ section {
   flex-direction: column;
   height: 100vh;
   width: 100%;
+  overflow: hidden;
 }
 section header {
   text-align: center;
@@ -55,16 +56,18 @@ section header {
   background-image: url("../Images/backgrounds/foggy-gabriela-palai.jpg");
 }
 #index-container #fx-fog {
+  position: absolute;
   width: 100%;
   height: 100%;
-  content: "";
+}
+#index-container #fx-fog .fog-particle {
+  filter: blur(10px);
+  -webkit-filter: blur(10px);
   position: absolute;
-  color: none;
-  height: 70%;
-  width: 60%;
-  border-radius: 100%;
-  background: #7d7d7d;
-  background: radial-gradient(circle, #7d7d7d 0%, rgba(208, 210, 215, 0) 53%, rgba(228, 230, 237, 0) 100%);
+  background: #b82d2d;
+  background: radial-gradient(circle, #b82d2d -30%, rgba(208, 210, 215, 0) 60%, rgba(228, 230, 237, 0) 100%);
+  height: 100%;
+  width: 100%;
 }
 #index-container .content-panel {
   grid-template-rows: [start] 2fr [links-start] 4fr [links-end end];
