--- a/Assets/css/style.scss
+++ b/Assets/css/style.scss
@@ -23,6 +23,7 @@ section {
     flex-direction: column;
     height: 100vh;
     width: 100%;
+    overflow: hidden;
 
     header {
         text-align: center;
@@ -72,18 +73,24 @@ section {
     .background-image {
         background-image: url("../Images/backgrounds/foggy-gabriela-palai.jpg");
     }
-
+    
+    $clr-fog: #b82d2d;
+    $clr-fog2: #2d4cd4;
     #fx-fog {
-        @include pseudoElement;
-        // background-color: rgba($color: gray, $alpha: 0.2);
-        color: none;
-        height: 70%;
-        width: 60%;
-        border-radius: 100%;
-        // box-shadow: 0px 0px 50px gray;
+        position: absolute;
+        width: 100%;
+        height: 100%;
 
-        background: rgb(125,125,125);
-        background: radial-gradient(circle, rgba(125,125,125,1) 0%, rgba(208,210,215,0) 53%, rgba(228,230,237,0) 100%);
+        
+        .fog-particle {
+            filter: blur(10px);
+            -webkit-filter: blur(10px);
+            position: absolute;
+            background: $clr-fog;
+            background: radial-gradient(circle, $clr-fog -30%, rgba(208,210,215,0) 60%, rgba(228,230,237,0) 100%);
+            height: 100%;
+            width: 100%;
+        }
     }
 
     .content-panel {
