--- a/Assets/css/style.scss
+++ b/Assets/css/style.scss
@@ -74,8 +74,7 @@ section {
         background-image: url("../Images/backgrounds/foggy-gabriela-palai.jpg");
     }
     
-    $clr-fog: #b82d2d;
-    $clr-fog2: #2d4cd4;
+    $clr-fog: #1b9094;
     #fx-fog {
         position: absolute;
         width: 100%;
@@ -162,8 +161,19 @@ section {
 
 
 #portfolio-container {
-    .background-image {
-        background-image: url("../Images/backgrounds/pexels-efdal-yildiz-917494.jpg");
+    #portfolio-bg-trees {
+        bottom: 0;
+        background-image: url("../Images/backgrounds/portfolio-trees-efdal-yildiz.png");
+        background-position: bottom;
+        background-attachment: local;
+        background-size: 50%;
+        background-repeat: repeat-x;
+    }
+
+    #portfolio-bg-stars {
+        background-image: url("../Images/backgrounds/portfolio-starry-felix-mittermeier.jpg");
+        background-size: 50%;
+        z-index: -6;
     }
     
     .content-panel {
