--- a/Assets/css/style.scss
+++ b/Assets/css/style.scss
@@ -178,6 +178,8 @@ section {
     
     .content-panel {
         background-color: green;
+        height: 70%;
+        width: 80vw;
     }
     
 }
