--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -11,14 +11,32 @@ section {
   width: 100%;
   overflow: hidden;
 }
-section header {
+
+header {
+  background-color: rgba(11, 37, 24, 0.5);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  position: fixed;
+  z-index: 10;
   text-align: center;
   order: 0;
   width: 100%;
   height: 7vh;
-  background-color: #0b2518;
   font-size: 200%;
   color: #faddff;
+  border-bottom: rgba(11, 37, 24, 0.2) solid 3px;
+}
+
+footer {
+  background-color: rgba(11, 37, 24, 0.5);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 3vh;
+  z-index: 10;
+  border-top: rgba(11, 37, 24, 0.2) solid 3px;
 }
 
 .background-image {
