--- a/Assets/css/style.scss
+++ b/Assets/css/style.scss
@@ -3,12 +3,20 @@ $green-dark: #0b2518;
 $clr-yellow-gray: #707065;
 $clr-pink-light: #faddff;
 $clr-button: #263f66;
+$clr-headerfooter: #0b2518;
 
 @mixin pseudoElement {
     width: 100%;
     height: 100%;
     content: "";
     position: absolute;
+}
+
+@mixin glassFX ($glasscolor) {
+    $blurAmount: 10px;
+    background-color: rgba($color: $glasscolor, $alpha: 0.5);
+    backdrop-filter: blur($blurAmount);
+    -webkit-backdrop-filter: blur($blurAmount);
 }
 
 html, body {
@@ -24,16 +32,29 @@ section {
     height: 100vh;
     width: 100%;
     overflow: hidden;
+}
 
-    header {
-        text-align: center;
-        order: 0;
-        width: 100%;
-        height: 7vh;
-        background-color: $green-dark;
-        font-size: 200%;
-        color: $clr-pink-light;
-    }
+header {
+    @include glassFX($clr-headerfooter);
+    position: fixed;
+    z-index: 10;
+    text-align: center;
+    order: 0;
+    width: 100%;
+    height: 7vh;
+    font-size: 200%;
+    color: $clr-pink-light;
+    border-bottom: rgba($color: $clr-headerfooter, $alpha: 0.2) solid 3px;
+}
+
+footer {
+    @include glassFX($clr-headerfooter);
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 3vh;
+    z-index: 10;
+    border-top: rgba($color: $clr-headerfooter, $alpha: 0.2) solid 3px;
 }
 
 .background-image {
@@ -55,6 +76,10 @@ section {
     z-index: 10;
     background-color: black;
     pointer-events: none;
+}
+
+.header-section {
+    // display: none;
 }
 
 #container {
